# solarfarmer-python-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  sdk_general_feedback.md  sdk_round2_feedback.md  sdk_weather_file_feedback.md
.github/workflows/: build.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
docs/: 404.md  api.md  faq.md  index.md  license.md
docs/getting-started/: custom-tracker-rotations.md  end-to-end-examples.md  index.md  quick-start-examples.md  workflow-1-existing-api-files.md  workflow-2-pvplant-builder.md  workflow-3-plantbuilder-advanced.md
docs/notebooks/: EnergyCalcInputs_Bern_Pydantic.json  Example_About_Service_endpoints.ipynb  Example_Compose_Plant.ipynb  Example_EnergyCalculations.ipynb  Example_PVSystem.ipynb  Example_TerminateAsync_endpoint.ipynb
docs/notebooks/sample_data/: EnergyCalcInputs2.json  PVSystem_modelchain_payload.json
docs/notebooks/sample_data/Inputs_Bern_2D_racks/: CanadianSolar_CS6U-330M_APP.PAN  Sungrow_SG125HV_APP.OND
docs/notebooks/sample_data/Inputs_Matera_3D_trackers/: 60_10_APP02.OND  EnergyCalcInputs.json  TrinaSolar_TSM-375DE14A(II)_APP.PAN
docs/notebooks/sample_data/Inputs_Matera_3D_trackers/sf_outputs_20260309_165530/: Annual and Monthly Results.json  CalculationAttributes.json
docs/notebooks/sample_data/testing_output_123/: Annual and Monthly Results.json  CalculationAttributes.json  LossTreeResults.tsv  PVsystResults.csv
solarfarmer/: __init__.py  __version__.py  api.py  config.py  custom_rotations.py  endpoint_about.py  endpoint_modelchains.py  endpoint_modelchains_utils.py  endpoint_service.py  endpoint_terminate_async.py  logging.py  weather.py
solarfarmer/models/: __init__.py  _base.py  auxiliary_losses.py  energy_calculation_inputs.py  energy_calculation_options.py  energy_calculation_results.py  enums.py  indexed_object3d.py  inverter.py  inverter_input.py  layout.py  location.py  mini_simple_terrain_dto.py  model_chain_response.py  module_index_range.py  module_string.py  monthly_albedo.py  mounting_type_specification.py  ond_supplements.py  pan_supplements.py  pv_plant.py  quad_double.py  rack.py  racks.py  shading_objects.py  simple_terrain.py  terrain_row_dto.py  terrain_row_start_end_columns_dto.py  tracker.py  tracker_system.py  trackers.py  trackers_conditions_dataset.py  transformer.py  transformer_specification.py  vector3double.py
solarfarmer/models/_proto/: __init__.py  trackers_conditions_dataset.proto  trackers_conditions_dataset_pb2.py
solarfarmer/models/pvsystem/: __init__.py  plant_defaults.py  plant_utils.py  pvsystem.py  validation.py
tests/: conftest.py  test_api.py  test_construct_plant.py  test_custom_rotations.py  test_endpoint_about.py  test_endpoint_modelchain.py  test_endpoint_modelchains_utils.py  test_endpoint_service.py  test_endpoint_terminate_async.py  test_energy_calculation_results.py  test_handle_timeseries_parsing.py  test_logging.py  test_model_chain_response.py  test_plant_utils.py  test_pvsystem.py  test_validation_message.py  test_version.py  test_weather.py
tests/test_models/: test_composition.py  test_monthly_albedo.py  test_pv_plant.py  test_serialization.py  test_trackers_conditions_protobuf.py  test_validation.py
